Centred text, added paragraph & button

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+</style>
+
 <body>
-    <h1>Coding Quiz</h1>
+    <h1>Coding Quiz</h1> 
     <p>Try your best to answer these multiple choice questions in 90 seconds!
         Keep track of your score by inputting your initials at the end of the quiz. 
         Good luck!
     </p>
+
+    <button>start Quiz</button>
 
 </body>
