Added divs and two buttons to html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -21,4 +21,21 @@
 
     <button>start Quiz</button>
 
+    <div class="timer"></div>
+
+    <div class="Final-score"></div>
+
+    <div class="Enter-Initials"></div>
+
+    <div class="All-Done"></div>
+
+    <div class="Enter Initials"></div>
+
+    <div class="High-Scores"></div>
+
+        <button>Go Back</button>
+        <button>Clear High Scores</button>
+</div>
+ 
+
 </body>
