Added two questions and linked JS file

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -19,6 +19,37 @@
         Good luck!
     </p>
 
+    <form class="quiz">
+        <div class="questions">
+            <p>1. What does HTML stand for?</p>
+            <p><input type="radio" name="q1" value="a" checked > </p>
+            <label>Hyper Text Markup Language</label>
+
+            <p><input type="radio" name="q1" value="b" checked > </p>
+            <label>Hyper Type Made Language</label>
+
+            <p><input type="radio" name="q1" value="c" checked > </p>
+            <label>Hyper Tick Marked Language</label>
+        </div>
+        <input type="next"
+        class="next-button">
+
+        <div class="questions">
+            <p>2. What does CSS stand for?</p>
+            <p><input type="radio" name="q2" value="a" checked > </p>
+            <label>Casanova Style Service</label>
+
+            <p><input type="radio" name="q2" value="b" checked > </p>
+            <label>Cascading Style Sheets</label>
+
+            <p><input type="radio" name="q2" value="c" checked > </p>
+            <label>Casting Style Solos</label>
+        </div>
+        <input type="next"
+        class="next-button">
+
+    </form>
+
     <button>start Quiz</button>
 
     <div class="timer"></div>
@@ -36,6 +67,6 @@
         <button>Go Back</button>
         <button>Clear High Scores</button>
 </div>
- 
+ <script src="/Develop/script.js"></script>
 
 </body>
