Testing buttons in HTML

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
             <p><input type="radio" name="q1" value="c" checked > </p>
             <label>Hyper Tick Marked Language</label>
         </div>
-        <input type="next"
+        <input type="button"
         class="next-button">
 
         <div class="questions">
