--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,7 +11,17 @@
     <div class="wrapper">
       <header>
         <h1>Coding Quiz</h1>
+        <!-- <div class="container">
+            <h2 id="timer"></h2>
+            <p id="main"></p>
+          </div> -->
       </header>
+
+      <div class="container">
+        <h2 id="counting"></h2>
+        <p id="main"></p>
+      </div>
+
       <div class="card">
         <div class="card-header">
           <h2>Test Your Knowledge</h2>
