--- a/Develop/index.html
+++ b/Develop/index.html
@@ -22,6 +22,26 @@
         <p id="main"></p>
       </div>
 
+      <section id="questionsContainer" class="hide">
+          <div id="question"></div>
+          <div id="answers" class="buttonArea"></div>
+      </section>
+
+      <section class="scores">
+          <div id="scoreArea" class="hide"></div>
+      </section>
+
+      <section class="controls">
+          <button class="btn" id="showScoresButton">See High Scores</button>
+      </section>
+      <br />
+      <div id="scoreArea" class="hide">
+        <span id="scoreDisplay"></span>
+        <input type="text" name="initials" id="initials" />
+        <button id="submitScore" class="submit">Submit Score</button>
+    </div>  
+
+
       <div class="card">
         <div class="card-header">
           <h2>Test Your Knowledge</h2>
