Amended button titles in html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -53,11 +53,11 @@
             placeholder="Try your best to answer these multiple choice questions in 90 seconds!
             Keep track of your score by inputting your initials at the end of the quiz. 
             Good luck!"
-            aria-label="Generated Password"
+            aria-label="Coding Quiz"
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Start Quiz</button>
+          <button id="start-quiz" class="btn">Start Quiz</button>
         </div>
       </div>
     </div>
