Added class to question in html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -43,7 +43,7 @@
 
       <!-- // Question Page Section -->
       <section id="questionsContainer" class="hide">
-        <div id="question"></div>
+        <div id="question" class="question"></div>
         <div id="answers" class="buttonArea">
           
         </div>
